blocks extension: fixed the styles for the 'top_right' image alignment of text blocks

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -29,6 +29,10 @@
 }
 
 /* Top right */
+.TextBlockView.top_right .image_list {
+    text-align: right;
+}
+
 .TextBlockView.top_right .image_gallery .image_entry > a {
     text-align: right;
 }
